After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752416 - audiofx: fix typos in example pipelines
audiofx: fix typos in example pipelines
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal minor
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-15 11:37 UTC by RaviKiran
Modified: 2015-08-16 13:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix typos (2.31 KB, patch)
2015-07-15 11:39 UTC, RaviKiran
committed Details | Review

Description RaviKiran 2015-07-15 11:37:46 UTC
Fix typo in example pipelines of audiofx (audiowsincband and audioinvert).
Comment 1 RaviKiran 2015-07-15 11:39:47 UTC
Created attachment 307469 [details] [review]
fix typos

Patch attached.
Comment 2 Tim-Philipp Müller 2015-07-15 12:53:34 UTC
Thanks!

commit 1c00801585419ce78a1c7f0ed9a8b52678bb6aff
Author: Ravi Kiran K N <ravi.kiran@samsung.com>
Date:   Wed Jul 15 17:20:20 2015 +0530

    audiofx: Fix typo in example pipelines
    
    Fix typo in example pipelines of audiowsincband and audioinvert.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752416